--- a/controllersPod/ReplicaSet.yml
+++ b/controllersPod/ReplicaSet.yml
@@ -27,11 +27,10 @@ metadata:
   name: javawebapppodsvc
   namespace: agunuworld
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     app: javawebapp
   ports:
   - port: 80
     targetPort: 8080
-    nodePort: 30002
 
