--- a/ingress_controllers/loadBalancerDaemonSet.yml
+++ b/ingress_controllers/loadBalancerDaemonSet.yml
@@ -24,7 +24,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: javawebapppodsvc
+  name: javawebapppodsv
   namespace: agunuworld
 spec:
   type: LoadBalancer
