--- a/monitoring_edureka_method/kube-state-metrics_And_kube-mtrics/service.yaml
+++ b/monitoring_edureka_method/kube-state-metrics_And_kube-mtrics/service.yaml
@@ -7,7 +7,7 @@ metadata:
   name: kube-state-metrics
   namespace: kube-system
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
   - name: http-metrics
     port: 8080
