--- a/Blockstorage/pv_rwx_file.yml
+++ b/Blockstorage/pv_rwx_file.yml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pv-nfs-pv1
-  namespace: agunuworld4
+  name: prometheus-alertmanager
+  namespace: monitoring
   labels:
     type: local
 spec:
@@ -14,3 +14,42 @@ spec:
   nfs:
     server: 172.31.8.183
     path: "/nfsbackup/backupfolder"
+
+
+
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: prometheus-server
+  namespace: monitoring
+  labels:
+    type: local
+spec:
+  storageClassName: manual
+  capacity:
+    storage: 2Gi
+  accessModes:
+    - ReadWriteMany
+  nfs:
+    server: 172.31.8.183
+    path: "/nfsbackup/backupfolder"
+ 
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: grafana
+  namespace: monitoring
+  labels:
+    type: local
+spec:
+  storageClassName: manual
+  capacity:
+    storage: 2Gi
+  accessModes:
+    - ReadWriteMany
+  nfs:
+    server: 172.31.8.183
+    path: "/nfsbackup/backupfolder"
+
