--- a/Blockstorage/host_path_springAndMongodblb.yml
+++ b/Blockstorage/host_path_springAndMongodblb.yml
@@ -2,9 +2,9 @@ apiVersion: apps/v1
 kind: ReplicaSet
 metadata:
   name: springapprs
-  namespace: agunuworld4
+  namespace: agunuworld7
 spec:
-  replicas: 3
+  replicas: 4
   selector:
     matchLabels:
      app: springappls
@@ -25,7 +25,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: springapppodsvc
-  namespace: agunuworld4
+  namespace: agunuworld7
 spec:
   type: LoadBalancer
   selector:
@@ -33,14 +33,13 @@ spec:
   ports:
   - port: 80
     targetPort: 8080
-    nodePort: 30004
 
 ---
 apiVersion: apps/v1
 kind: ReplicaSet
 metadata:
   name: mongoapprs
-  namespace: agunuworld4
+  namespace: agunuworld7
 spec:
   selector:
     matchLabels:
@@ -51,17 +50,24 @@ spec:
       labels:
         app: mongo
     spec:
+      volumes:
+      - name: mongohostpath
+        hostPath:
+           path: /opt/mongobkp           #/tmp/mongobkp or /opt/mybkp
       containers:
       - name: mongocontainer
         image: mongo
         ports:
         - containerPort: 27017
+        volumeMounts:
+        - name: mongohostpath
+          mountPath: /data/db
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: mongo
-  namespace: agunuworld4
+  namespace: agunuworld7
 spec:
   type: ClusterIP
   selector:
