--- a/Blockstorage/pv_rwx_file.yml
+++ b/Blockstorage/pv_rwx_file.yml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: prometheus-alertmanager
-  namespace: monitoring
+  name: nfs-pv1
+  namespace: agunuworld7
   labels:
     type: local
 spec:
@@ -12,44 +12,9 @@ spec:
   accessModes:
     - ReadWriteMany
   nfs:
-    server: 172.31.8.183
-    path: "/nfsbackup/backupfolder"
+    server: 35.235.103.123
+    path: "/agunubackup/agunubackup4/"
 
 
 
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: prometheus-server
-  namespace: monitoring
-  labels:
-    type: local
-spec:
-  storageClassName: manual
-  capacity:
-    storage: 2Gi
-  accessModes:
-    - ReadWriteMany
-  nfs:
-    server: 172.31.8.183
-    path: "/nfsbackup/backupfolder"
- 
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: grafana
-  namespace: monitoring
-  labels:
-    type: local
-spec:
-  storageClassName: manual
-  capacity:
-    storage: 2Gi
-  accessModes:
-    - ReadWriteMany
-  nfs:
-    server: 172.31.8.183
-    path: "/nfsbackup/backupfolder"
 
