--- a/configMag_configSecret/worldpress_worldpress.yml
+++ b/configMag_configSecret/worldpress_worldpress.yml
@@ -27,7 +27,7 @@ spec:
         - name: WORDPRESS_DB_PASSWORD
           valueFrom:
             configMapKeyRef:
-              name: mysql-configmap
+              name: mysql-pass
               key: password
         ports:
         - containerPort: 80
