--- a/monitoring_MithunTech_method/Prometheus_Grafana/pv_rwx_file.yml
+++ b/monitoring_MithunTech_method/Prometheus_Grafana/pv_rwx_file.yml
@@ -1,42 +1,6 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: prometheus-alertmanager
-  namespace: monitoring5
-  labels:
-    type: local
-spec:
-  storageClassName: manual
-  capacity:
-    storage: 2Gi
-  accessModes:
-    - ReadWriteMany
-  nfs:
-    server: 35.235.103.123
-    path: "/agunubackup/agunubackup4/"
-
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: prometheus-server
-  namespace: monitoring5
-  labels:
-    type: local
-spec:
-  storageClassName: manual
-  capacity:
-    storage: 2Gi
-  accessModes:
-    - ReadWriteMany
-  nfs:
-    server: 35.235.103.123
-    path: "/agunubackup/agunubackup4/"
-
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
   name: grafana
   namespace: monitoring
   labels:
@@ -48,6 +12,42 @@ spec:
   accessModes:
     - ReadWriteMany
   nfs:
-    server: 35.235.103.123
-    path: "/agunubackup/agunubackup4/"
+    server: 10.150.0.4
+    path: "/nfs_backup/nfs_backup4/"
+
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: prometheus-server
+  namespace: monitoring
+  labels:
+    type: local
+spec:
+  storageClassName: manual
+  capacity:
+    storage: 2Gi
+  accessModes:
+    - ReadWriteMany
+  nfs:
+    server: 10.150.0.4
+    path: "/nfs_backup/nfs_backup4/"
+    
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: prometheus-alertmanager
+  namespace: monitoring
+  labels:
+    type: local
+spec:
+  storageClassName: manual
+  capacity:
+    storage: 2Gi
+  accessModes:
+    - ReadWriteMany
+  nfs:
+    server: 10.150.0.4
+    path: "/nfs_backup/nfs_backup4/"
 
