--- a/monitoring_edureka_method/Prometheus_Grafana/grafana.yml
+++ b/monitoring_edureka_method/Prometheus_Grafana/grafana.yml
@@ -40,7 +40,7 @@ metadata:
      app: grafana-ui
    namespace: monitoring
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
      app: grafana-ui
   ports:
